# praktisi-mengajar-mikroskil

./: .gitignore  README.md
Environment/: README.md  docker-compose.yml
Topik 1/: Slide_Paparan.md
Topik 2/: .env.example  .gitignore  Makefile  Slide_Paparan.md  WALKTHROUGH_LENGKAP.md  docker-compose.yml  gemini_mysql_demo.ipynb  init_mysql.sql  load_data.py  pyproject.toml
Topik 2/materi/: Live_Code_MySQL.md  Slide_Paparan.md
Topik 3/: Live_Code_MongoDB.md  Slide_Paparan.md  init_mongodb.js
