[project]
name = "gemini-mysql-demo"
version = "0.1.0"
description = "Gemini API + MySQL Analysis Demo — REY x Mikroskil"
requires-python = ">=3.10"
dependencies = [
    "mysql-connector-python>=8.0.0",
    "google-genai>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = []
